[project]
name = "qube-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "deprecated>=1.2.18",
    "e7awghal",
    "pydantic>=2.4.2",
    "pylabrad>=0.98.2",
    "quel_ic_config",
]

[project.scripts]
qube_server = "qube_server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-twisted>=1.14.3",
    "ruff>=0.11.13",
]

[tool.uv.sources]
quel_ic_config = { git = "https://github.com/quel-inc/quelware.git", subdirectory = "quel_ic_config", rev = "main" }
e7awghal = { git = "https://github.com/quel-inc/quelware.git", subdirectory = "e7awghal", rev = "main" }

[tool.ruff]
target-version = "py39"

