[project]
name = "qube-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "deprecated>=1.2.18",
    "e7awghal>=0.1.5",
    "pydantic>=2.4.2",
    "pylabrad>=0.98.2",
    "python-dotenv>=1.1.1",
    "quel_ic_config>=0.10.5",
]

[project.scripts]
qube_server = "qube_server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-twisted>=1.14.3",
    "ruff>=0.11.13",
]

[tool.ruff]
target-version = "py39"

